--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,14 @@ theme: minima
 plugins:
   - jekyll-feed
 
+author : 
+  name : Jason
+  site: https://kokatoo.github.io
+  description : I&#39;m an IT enthusiast
+  image : jason.png
+  email : kokatoo1948@gmail.com
+  github : kokatoo
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
