--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ plugins:
 author : 
   name : Jason
   site: https://kokatoo.github.io
-  description : I&#39;m an IT enthusiast
+  description : Passionate software engineer with a background in CS, Math, and Statistics. Love challenges and solving hard quantitative problems with interest in the area of finance and ML.
   image : jason.png
   email : kokatoo1948@gmail.com
   github : kokatoo
