--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,11 @@ github_username:  kokatoo
 
 # Build settings
 theme: minima
+
+markdown: kramdown
+kramdown:
+   math_engine: katex
+
 plugins:
   - jekyll-feed
 
