Add tag and change color

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ kramdown:
 
 plugins:
   - jekyll-feed
+  - jekyll/tagging
 
 author : 
   name : Jason
@@ -46,6 +47,9 @@ author :
   image : jason.png
   email : kokatoo1948@gmail.com
   github : kokatoo
+
+tag_page_layout: tag
+tag_page_dir: tags
 
 # Exclude from processing.
 # The following items will not be processed, by default.
