--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,8 @@ author :
   image : jason.png
   email : kokatoo1948@gmail.com
   github : kokatoo
+  facebook : InterDataInnovLabs
+  linkedin : j-k-b5298520
 
 # Exclude from processing.
 # The following items will not be processed, by default.
